# pyamos

./: .gitignore  CMakeLists.txt  LICENSE  LICENSES_bundled.txt  README.md  amos.h  compare_vectorized_xsf.py  compare_xsf_zbessel.py  debugging.txt  pixi.toml  pyamos.cpp
zbessel/zbessel/: zbsubr.h
